--- a/OrdersFood/Dockerfile
+++ b/OrdersFood/Dockerfile
@@ -1,3 +1,4 @@
 From openjdk:8
-copy ./target/OrdersFood-1.0-SNAPSHOT.jar OrdersFood-1.0-SNAPSHOT.jar
-CMD ["java","-jar","OrdersFood-1.0-SNAPSHOT.jar"]
+ADD ./target/OrdersFood-1.0-SNAPSHOT.jar app.jar
+EXPOSE 8989
+ENTRYPOINT ["java", "-jar","/app.jar"]
