--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,46 @@
-version: '3.1'
+version: '3.7'
 
 services:
-  db:
+  mysql:
     image: mysql
-    container_name: db
+    container_name: mysql-database
+    restart: always
+    volumes:
+      - db_data:/var/lib/mysql
     ports:
-      - 3306:3306
-    expose:
-      - 3306
-    networks:
-      - jobsearchtracker-net
+      - "3307:3306"
     environment:
-      MYSQL_USER: 'root'
-      MYSQL_PASSWORD: 'root'
-      MYSQL_DATABASE: 'ordersfood'
-      MYSQL_ROOT_PASSWORD: 'root'
+      MYSQL_DATABASE: ordersfood
+      MYSQL_USER: "root"
+      MYSQL_PASSWORD: "root"
+      MYSQL_ROOT_PASSWORD: "root"
+    networks:
+      - common-network
 
-  web:
-    image: order-food-be
-    container_name: web
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://localhost:3306/ordersfood?useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-      SPRING_DATASOURCE_USERNAME: 'root'
-      SPRING_DATASOURCE_PASSWORD: 'root'
-    networks:
-      - jobsearchtracker-net
+  backend:
+    depends_on: 
+      - mysql
+    # image: backend
+    container_name: web-springboot
+    build: 
+      context: OrdersFood
+      dockerfile: Dockerfile
     ports:
-      - 8080:8080
-    depends_on:
-      - db
-    links:
-      - db:db
+      - "8081:8080"
+    restart: always
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/ordersfood?failOverReadOnly=false&maxReconnects=10
+      SPRING_DATASOURCE_USERNAME: "root"
+      SPRING_DATASOURCE_PASSWORD: "root"
+    networks:
+      - common-network
 
+#Docker Networks
 networks:
-  jobsearchtracker-net:
+    common-network:
+        driver: bridge
+
+#Volumes
+volumes:
+    db_data:
+        driver: local
