--- a/OrdersFood-FE/tsconfig.json
+++ b/OrdersFood-FE/tsconfig.json
@@ -14,6 +14,7 @@
         "esModuleInterop": true,
         "experimentalDecorators": true,
         "importHelpers": true,
+        "strictPropertyInitialization": false,
         "lib": [
             "es2018",
             "dom"
