--- a/.gitignore
+++ b/.gitignore
@@ -230,3 +230,8 @@
 /OrdersFood/.vscode
 /OrdersFood/out
 /OrdersFood/out
+/OrdersFood/out
+/OrdersFood/out/artifacts/OrdersFood_jar/OrdersFood.jar
+/OrdersFood/out
+/OrdersFood/out/artifacts/OrdersFood_jar
+/OrdersFood/out/artifacts/OrdersFood_jar/OrdersFood.jar
