update product be

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,9 +29,22 @@ services:
       - "8081:8080"
     restart: always
     environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/ordersfood?failOverReadOnly=false&maxReconnects=10
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/ordersfood?createDatabaseIfNotExist=true&failOverReadOnly=false&maxReconnects=10
       SPRING_DATASOURCE_USERNAME: "root"
       SPRING_DATASOURCE_PASSWORD: "root"
+    networks:
+      - common-network
+      
+  angular-service:
+    depends_on: 
+      - backend
+    container_name: client-angular
+    build:
+      context: OrdersFood-FE
+      dockerfile: Dockerfile
+    ports:
+      - "4200:4200"
+    # restart: always
     networks:
       - common-network
 
