UPDATE PRODUCT DETAIL

--- a/OrdersFood/src/main/resources/application.yml
+++ b/OrdersFood/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
     show-sql: true
     generate-ddl: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
     database: mysql
     database-platform: org.hibernate.dialect.MySQL5Dialect
 
